fix(goldwind): alignment issues, more translations and diffs (#3548)
* fix(goldwind): add missing translation key and gcm description

* feat(goldwind): add html support for sensor descriptions

* fix(goldwind): footer color to 0.6

* feat(goldwind): add i18n for gcm sensor description

* fix(goldwind): fix tooltip alignment

* fix(goldwind): revert fix for margin top of link

* feat(goldwind): move icon to the right of the title

--- a/apps/goldwind/src/app/app.component.scss
+++ b/apps/goldwind/src/app/app.component.scss
@@ -22,10 +22,7 @@
 }
 
 ::ng-deep schaeffler-footer > footer {
-  div:nth-child(2) {
-    margin-top: 0 !important;
-  }
   a:-webkit-any-link {
-    color: $dark-secondary-text;
+    @apply text-light;
   }
 }
